# speech2class

./: Dockerfile.build  README.md  build_task.py  format.sh  inference.py  vad_task.py  vpr_task.py
callbacks/: callbacks.py
config/inference/: infer.yaml
config/training/: crdnn.yaml  ecapa_tdnn.yaml  resnet.yaml  resnet18.yaml
dataset/: dataset.py  dataset_test.py  utils.py
dataset/frontend/: data_augmentation.py  frontend.py  frontend_test.py
model/: utils.py  utils_test.py
model/embedding_model/: ecapa_tdnn.py  ecapa_tdnn_test.py  embedding_model.py  resnet.py  resnet_test.py
model/loss/: am_softmax.py  am_softmax_test.py  cross_entropy.py  cross_entropy_test.py  loss.py
model/vad_model/: crdnn.py  crdnn_test.py  vad_model.py
model/vad_model/onnx_export/: crdnn_onnx.py  crdnn_onnx_test.py
optimizer/: optim_setup.py
runtime/: CMakeLists.txt
runtime/cmake/: googletest.cmake  libtorch.cmake
runtime/config/: example.json  test_data.json
runtime/vad_rt/: CMakeLists.txt  build_vad_sess.cc  vad_session.cc  vad_session.h  vad_session_test.cc
runtime/vad_rt/frontend/: CMakeLists.txt  feature_extract.cc  feature_extract.h  feature_extract_test.cc  wav.h  wav_test.cc
runtime/vad_rt/model_interface/: CMakeLists.txt  vad_model.cc  vad_model.h  vad_model_test.cc
runtime/vad_rt/utils/: json.h  thread_pool.h
sample_data/: .gitignore  noise_data.json  vad_eval_data.json
sample_data/data/labels/: 1272-135031-0020.h5  1462-170138-0015.h5  1673-143397-0005.h5  1919-142785-0010.h5  2035-147961-0020.h5  2086-149220-0019.h5  251-136532-0007.h5  3752-4943-0002.h5  652-130726-0030.h5  777-126732-0012.h5
sample_data/model/: crdnn_int8.script  frontend.script
sample_data/model/demo_task/: crdnn.yaml
sample_data/model/demo_task/checkpoints/: crdnn.ckpt
tools/: model_average.py
